<resources>
    <string name="app_name">Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="permission_rationale">Coño papi da permiso</string>
    <string name="menu_principal_1">Agregar Ser Querido</string>
    <string name="menu_principal_2">Seres Queridos</string>
    <string name="menu_principal_3">Lugares Frecuentes</string>
    <string name="menu_principal_4">Rutinas</string>
    <string name="menu_principal_5">Cerrar Sesión</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="trackerLogo">Tracker Logo</string>
    <string name="btnAgregar">Agregar</string>
    <string name="btnEscogerSitio">Escoger Sitio</string>
    <string name="labelTelefono">Teléfono</string>
    <string name="labelNombre">Nombre</string>
    <string name="labelViaje">Iniciar Un Viaje</string>
    <string name="labelSpinner">Selecciona a tus Seres Queridos</string>
    <string name="labelCoordenadas">Coordenadas</string>
    <string name="labelDireccion">Dirección</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
