<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_seres"
            android:icon="@drawable/ic_add_ser"
            android:title="@string/menu_principal_1"
            android:color="?attr/textColor" />
        <item
            android:id="@+id/frecuent_place"
            android:icon="@drawable/ic_add_place"
            android:title="@string/menu_principal_2"
            android:color="?attr/textColor" />
        <item
            android:id="@+id/seres"
            android:icon="@drawable/ic_seres"
            android:title="@string/menu_principal_3"
            android:color="?attr/textColor" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_principal_4"
            android:color="?attr/textColor" />
    </group>
</menu>
