<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tracker.tracker.ModifySQDialog">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="304dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:text="Añadir LugarFrecuente"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelNombre" />

            <EditText
                android:id="@+id/txtLFNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Pedro Perez"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelCoordenadas"/>

            <TextView
                android:id="@+id/txtLFCoordenadas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnLFFindPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/colorAccent"
                android:padding="16dp"
                android:text="@string/btnEscogerSitio"
                android:textColor="?attr/textColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnCancelar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:padding="4dp"
                    android:src="@drawable/ic_delete" />

                <ImageButton
                    android:id="@+id/btnAgregarLF"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:cropToPadding="false"
                    android:padding="4dp"
                    android:src="@drawable/ic_confirm_icon" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>