<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tracker.tracker.mLugarFrecuenteDialog">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="385dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text="Modificar Lugar Frecuente"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:paddingBottom="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelNombre" />

            <EditText
                android:id="@+id/txtMLFNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Universidad Metropolitana"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/labelDireccion"
                android:textAlignment="center"
                android:textColor="?attr/textColor" />

            <TextView
                android:id="@+id/txtMLFDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:textAlignment="center"
                android:textColor="?attr/textColor"
                android:textSize="9pt" />

            <Button
                android:id="@+id/btnMLFFindPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="8dp"
                android:background="?attr/cardColor"
                android:padding="16dp"
                android:text="@string/btnEscogerSitio"
                android:textColor="?attr/textColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnMLFCancelar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:padding="4dp"
                    android:src="@drawable/ic_delete" />

                <ImageButton
                    android:id="@+id/btnMLFAceptar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:cropToPadding="false"
                    android:padding="4dp"
                    android:src="@drawable/ic_confirm_icon" />

                <ImageButton

                    android:id="@+id/btnMLFEliminar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:padding="4dp"
                    android:src="@drawable/ic_baseline_delete_24px" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>